feat: add standings